grid-align-fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,14 +573,14 @@ header .navbar ul li a:hover {
   color: #fff;
   border-radius: 1rem;
   padding: 2rem;
-  width: 90%;
+  width: 100%;
   margin: auto;
   margin-top: 2rem;
 }
 
 .skills .container .row {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   flex-wrap: wrap;
   gap: 1.8rem;
 }
